# aa-meetings-list

./: .gitignore  README.md  aa-meetings-list.cabal  about.md  contact.md  index.html  site.hs
.github/workflows/: hakyll-build.yml
css/: default.css
posts/: new-york-meetings.md  seattle-meetings.md
templates/: default.html  meetings-base.html  meetings.html  region.html  subregion.html
